[tool.poetry]
name = "sklearn"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^0.23.1"
matplotlib = "^3.5.3"
numpy = "^1.23.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
